--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -291,6 +291,8 @@
       >
     {%- endif -%}
 
+    <link rel="stylesheet" href="{{ 'style.css' | asset_url }}">
+
     <script>
       if (Shopify.designMode) {
         document.documentElement.classList.add('shopify-design-mode');
