--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -42,7 +42,7 @@
           {%- endif -%}
           <p class="announcement-bar__message h5">
             <span class="svg-wrapper">
-              {{ section.blocks.first.settings.image |  image_url  }}
+              {{ section.blocks.first.settings.icon |  image_url  }}
             </span>
             <span>{{ section.blocks.first.settings.text | escape }}</span>
             {%- if section.blocks.first.settings.link != blank -%}
