--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -128,12 +128,6 @@
             </span>
           </button>
         </div>
-        {{- 'icon-mail.svg' | asset_url -}}
-        <p class="announcement-bar__message h5">
-          <a href="mail:to{{{{ section.settings.mail  }}}}">
-          <span>{{ section.settings.mail  }}</span>
-          </a>
-        </p>
       </slideshow-component>
       {%- if request.design_mode -%}
         <script src="{{ 'theme-editor.js' | asset_url }}" defer="defer"></script>
@@ -144,7 +138,13 @@
           }
         </style>
       {%- endif -%}
-    {%- endif -%}
+    {%- endif -%}ppkk
+    {{- 'icon-mail.svg' | asset_url -}}
+    <p class="announcement-bar__message h5">
+      <a href="mail:to{{{{ section.settings.mail  }}}}">
+      <span>{{ section.settings.mail  }}</span>
+      </a>
+    </p>
     <div class="localization-wrapper">
       {%- if section.settings.enable_country_selector and localization.available_countries.size > 1 -%}
         <localization-form class="small-hide medium-hide">
