--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -141,7 +141,7 @@
     {%- endif -%}ppkk
     {{- 'icon-mail.svg' | asset_url -}}
     <p class="announcement-bar__message h5">
-      <a href="mail:to{{{{ section.settings.mail  }}}}">
+      <a href="mail:to{{ section.settings.mail  }}">
       <span>{{ section.settings.mail  }}</span>
       </a>
     </p>
