--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -142,12 +142,12 @@
     <div class="mail-wrapper">
       <a class="link" href="mailto:{{ section.settings.mail  }}">
         {{- 'icon-mail.svg' | inline_asset_content -}}
-      <span>{{ section.settings.mail  }}</span>
+      <span class="br">{{ section.settings.mail  }}</span>
       </a>
       </div>
-    <div class="localization-wrapper">
+    <div class="">
       {%- if section.settings.enable_country_selector and localization.available_countries.size > 1 -%}
-        <localization-form class="small-hide medium-hide">
+        <localization-form class="small-hide medium-hide br">
           {%- form 'localization', id: 'AnnouncementCountryForm', class: 'localization-form' -%}
             <div>
               <h2 class="visually-hidden" id="AnnouncementCountryLabel">{{ 'localization.country_label' | t }}</h2>
@@ -158,7 +158,7 @@
       {% endif %}
 
       {%- if section.settings.enable_language_selector and localization.available_languages.size > 1 -%}
-        <localization-form class="small-hide medium-hide">
+        <localization-form class="small-hide medium-hide br">
           {%- form 'localization', id: 'AnnouncementLanguageForm', class: 'localization-form' -%}
             <div>
               <h2 class="visually-hidden" id="AnnouncementLanguageLabel">{{ 'localization.language_label' | t }}</h2>
