--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -142,7 +142,7 @@
     <div class="mail-wrapper">
       <a class="link" href="mailto:{{ section.settings.mail  }}">
         {{- 'icon-mail.svg' | inline_asset_content -}}
-      <span style="border-right: 1px solid #000;padding-right:10px" >{{ section.settings.mail  }}</span>
+      <span style="border-right: 1px solid #fff;padding-right:10px" >{{ section.settings.mail  }}</span>
       </a>
       </div>
     <div class="">
