--- a/assets/style.css
+++ b/assets/style.css
@@ -25,4 +25,9 @@ a{
 		border-right:none;
 		padding-right: 0px;
 }
+@media screen and (min-width: 990px) {
+	.header--middle-left {
+	  grid-template-columns: auto auto;
+	}
+  }
 
