--- a/assets/style.css
+++ b/assets/style.css
@@ -35,7 +35,7 @@ a{
   }
 
 .banner__text{
-	background: rgba(var(--color-foreground);
+	background: rgba(var(--color-foreground));
 	padding: 10px 20px;
 }
 .button{
