--- a/assets/style.css
+++ b/assets/style.css
@@ -41,6 +41,24 @@ a{
 .button{
 	border-radius: 50px;
 }
+.btn{
+    box-shadow: 0 4px 9px rgba(0,0,0,.05);
+    cursor: pointer;
+    padding: 2% 5%;
+    border-radius: 50px;
+    text-decoration: none;
+    border: 1px solid rgb(var(--color-button));
+    font-weight: 600;
+}
+.btn-primary{
+    background-color: rgb(var(--color-button));
+    color: rgb(var(--color-button-text));
+    transition: .2s all linear;
+}
+.btn-primary:hover{
+    color: rgb(var(--color-button));
+    background-color: rgb(var(--color-button-text));
+}
 .button::after,.button::before,.button:not([disabled]):hover::after{
 	box-shadow: none;
 }
