--- a/sections/two-column-section.liquid
+++ b/sections/two-column-section.liquid
@@ -52,20 +52,7 @@
     background-color: rgb(0, 0, 0);
     opacity: .1;
 }
-/* .overlay-hover::after{
-    content: ""; 
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(0, 0, 0);
-    opacity: 0;
-    z-index: 99;
-}
-.item:hover .overlay-hover::after{
-    opacity: .1;
-} */
+
 .overlay-hover::before{
     position: absolute;
     top: 0;
@@ -113,25 +100,6 @@
     font-size: 34px;
     width: 60%;
 }
-.btn{
-    box-shadow: 0 4px 9px rgba(0,0,0,.05);
-    cursor: pointer;
-    padding: 2% 5%;
-    border-radius: 4px;
-    text-decoration: none;
-    border: 1px solid rgb(var(--color-button));
-    font-weight: 600;
-}
-.btn-primary{
-    background-color: rgb(var(--color-button));
-    color: rgb(var(--color-button-text));
-    transition: .2s all linear;
-}
-.btn-primary:hover{
-    color: rgb(var(--color-button));
-    background-color: rgb(var(--color-button-text));
-
-}
 
 
 /* Responsive Mobile */
@@ -152,7 +120,7 @@
           <div class="text">
             <p>{{ block.settings.collection_name }}</p>
             <h2>{{ block.settings.heading }}</h2>
-            <a class="btn btn-primary" href="{{block.settings.button_link}}">{{ block.settings.button_label }}</a>
+            <a class="button" href="{{block.settings.button_link}}">{{ block.settings.button_label }}</a>
           </div>
           <div class="image overlay-hover">
             {% if block.settings.image != blank %}
@@ -169,7 +137,7 @@
 
 {% schema %}
 {
-"name": "t:sections.two-column-gallary.name",
+"name": "Two column Gallary",
 "tag": "section",
 "class": "section",
   "settings": [
