--- a/sections/two-column-section.liquid
+++ b/sections/two-column-section.liquid
@@ -120,7 +120,7 @@
           <div class="text">
             <p>{{ block.settings.collection_name }}</p>
             <h2>{{ block.settings.heading }}</h2>
-            <a class="button" href="{{block.settings.button_link}}">{{ block.settings.button_label }}</a>
+            <a class="btn btn-primary" href="{{block.settings.button_link}}">{{ block.settings.button_label }}</a>
           </div>
           <div class="image overlay-hover">
             {% if block.settings.image != blank %}
