--- a/sections/two-column-section.liquid
+++ b/sections/two-column-section.liquid
@@ -27,7 +27,6 @@
 .image{
     display: block;
     max-width: 100%;
-    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
@@ -73,10 +72,6 @@
     opacity: 1;
 }
 
-
-#two-column-gallary .text{
-    padding: 10px 30px 100px;
-}
 #two-column-gallary .text > *{
     font-weight: 600;
     line-height: 1.3;
@@ -90,7 +85,7 @@
     position: relative;
     overflow: hidden;
     transition: 0.5s all ease-in-out; 
-    height: 400px; 
+    height: 200px; 
 }
 #two-column-gallary .item:hover .image{
     transform: scale(1.3);
@@ -98,7 +93,6 @@
 }
 #two-column-gallary .item .text h2{
     font-size: 34px;
-    width: 60%;
 }
 
 
@@ -117,16 +111,14 @@
     <div class="box">
       {% for block in section.blocks %}
         <div class="item item1">
-          <div class="text">
-            <p>{{ block.settings.collection_name }}</p>
+          <div class="text" style="text-align:{{block.settings.align}}">
             <h2>{{ block.settings.heading }}</h2>
+            <p>{{ block.settings.collection_name }}</p>
             <a class="btn btn-primary" href="{{block.settings.button_link}}">{{ block.settings.button_label }}</a>
           </div>
           <div class="image overlay-hover">
             {% if block.settings.image != blank %}
               <img src="{{ block.settings.image | image_url }}" alt="">
-            {% else %}
-              <img src="{{'banner.jpg '| asset_url}}" alt="">
             {% endif %}
           </div>
         </div>
@@ -181,6 +173,22 @@
           "type": "image_picker",
           "id": "image",
           "label": "t:sections.multicolumn.blocks.column.settings.image.label"
+          },
+          {
+          "type": "select",
+          "id": "align",
+          "label": "Text Align",
+          "default" : "left",
+          "options": [
+                {
+                "value": "left",
+                "label": "left"
+                },
+                {
+                "value": "right",
+                "label": "right"
+                }
+            ]
           },
           {
           "type": "text",
