--- a/sections/two-column-section.liquid
+++ b/sections/two-column-section.liquid
@@ -94,6 +94,9 @@
 #two-column-gallary .item .text h2{
     font-size: 34px;
 }
+#two-column-gallary .item .text{
+    width: 50%;
+}
 
 
 /* Responsive Mobile */
@@ -110,11 +113,11 @@
   <div class="section-{{ section.id }}-padding page-width">
     <div class="box">
       {% for block in section.blocks %}
-        <div class="item item1">
-          <div class="text" style="text-align:{{block.settings.align}}">
+        <div class="item item1" style="float:{{block.settings.align}}">
+          <div class="text">
             <h2>{{ block.settings.heading }}</h2>
             <p>{{ block.settings.collection_name }}</p>
-            <a class="btn btn-primary" href="{{block.settings.button_link}}">{{ block.settings.button_label }}</a>
+            <a class="btn btn-{{block.settings.button}}" href="{{block.settings.button_link}}">{{ block.settings.button_label }}</a>
           </div>
           <div class="image overlay-hover">
             {% if block.settings.image != blank %}
@@ -173,6 +176,22 @@
           "type": "image_picker",
           "id": "image",
           "label": "t:sections.multicolumn.blocks.column.settings.image.label"
+          },
+          {
+          "type": "select",
+          "id": "button",
+          "label": "Button Color",
+          "default" : "primary",
+          "options": [
+                {
+                "value": "primary",
+                "label": "primary"
+                },
+                {
+                "value": "secondary",
+                "label": "secondary"
+                }
+            ]
           },
           {
           "type": "select",
