--- a/sections/two-column-section.liquid
+++ b/sections/two-column-section.liquid
@@ -96,6 +96,7 @@
 }
 #two-column-gallary .item .text{
     width: 50%;
+    text-align: center;
 }
 
 
@@ -113,8 +114,8 @@
   <div class="section-{{ section.id }}-padding page-width">
     <div class="box">
       {% for block in section.blocks %}
-        <div class="item item1" style="float:{{block.settings.align}}">
-          <div class="text">
+        <div class="item item1" >
+          <div class="text" style="float:{{block.settings.align}}">
             <h2>{{ block.settings.heading }}</h2>
             <p>{{ block.settings.collection_name }}</p>
             <a class="btn btn-{{block.settings.button}}" href="{{block.settings.button_link}}">{{ block.settings.button_label }}</a>
@@ -212,14 +213,14 @@
           {
           "type": "text",
           "id": "collection_name",
-          "label": "Collection Name",
-          "default" : "New Collection"
+          "label": "Sub Text",
+          "default" : "Big Offers!"
           },
           {
           "type": "text",
           "id": "heading",
-          "label": "Collection Name",
-          "default": "Intensive Glow C+ Serum"
+          "label": "Heading",
+          "default": "Mens Big Collections"
           },
           {
           "type": "text",
