--- a/sections/two-column-section.liquid
+++ b/sections/two-column-section.liquid
@@ -93,10 +93,16 @@
 }
 #two-column-gallary .item .text h2{
     font-size: 24px;
+    margin: 0;
 }
 #two-column-gallary .item .text{
     width: 65%;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
 }
 
 
