--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -204,6 +204,10 @@
           "label": "t:sections.image-banner.settings.image_height.options__1.label"
         },
         {
+          "value": "tiny",
+          "label": "Tiny"
+        },
+        {
           "value": "small",
           "label": "t:sections.image-banner.settings.image_height.options__2.label"
         },
