--- a/sections/two-column-section.liquid
+++ b/sections/two-column-section.liquid
@@ -96,7 +96,7 @@
     margin: 0;
 }
 #two-column-gallary .item .text{
-    width: 65%;
+    width: 75%;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -245,7 +245,7 @@
 
 "presets": [
     {
-    "name": "t:sections.two-column-gallary.presets.name"
+    "name": "Two Column Gallary"
     }
 ]
 }
