--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -120,7 +120,7 @@
       {%- for block in section.blocks -%}
         {%- case block.type -%}
           {%- when 'heading' -%}
-            <h2
+            <h2 style="color:{{{{ block.settings.heading_color }}}}"
               class="banner__heading inline-richtext {{ block.settings.heading_size }}"
               {{ block.shopify_attributes }}
             >
@@ -375,6 +375,12 @@
           "id": "heading",
           "default": "t:sections.image-banner.blocks.heading.settings.heading.default",
           "label": "t:sections.image-banner.blocks.heading.settings.heading.label"
+        },
+        {
+          "type": "color",
+          "id": "heading_color",
+          "default": "#FFF",
+          "label": "Heading Color"
         },
         {
           "type": "select",
