--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -120,7 +120,7 @@
       {%- for block in section.blocks -%}
         {%- case block.type -%}
           {%- when 'heading' -%}
-            <h2 style="color:{{{{ block.settings.heading_color }}}}"
+            <h2 style="color:{{block.settings.heading_color }}"
               class="banner__heading inline-richtext {{ block.settings.heading_size }}"
               {{ block.shopify_attributes }}
             >
