--- a/sections/two-column-section.liquid
+++ b/sections/two-column-section.liquid
@@ -102,7 +102,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 200px;
+    height: {{section.settings.height}};
 }
 
 
