--- a/sections/two-column-section.liquid
+++ b/sections/two-column-section.liquid
@@ -120,6 +120,7 @@
   <div class="section-{{ section.id }}-padding page-width">
     <div class="box">
       {% for block in section.blocks %}
+        <a href="{{block.settings.button_link}}">
         <div class="item item1" >
           <div class="text" style="float:{{block.settings.align}}">
             <h2>{{ block.settings.heading }}</h2>
@@ -132,6 +133,7 @@
             {% endif %}
           </div>
         </div>
+        </a>
       {% endfor %}
     </div>
   </div>
