--- a/sections/two-column-section.liquid
+++ b/sections/two-column-section.liquid
@@ -71,6 +71,9 @@
     transform: scale3d(1.9,1.4,1) rotate3d(0,0,1,-45deg) translate3d(0,150%,0);
     opacity: 1;
 }
+.item{
+  cursor: pointer;
+}
 
 #two-column-gallary .text > *{
     font-weight: 600;
@@ -120,8 +123,7 @@
   <div class="section-{{ section.id }}-padding page-width">
     <div class="box">
       {% for block in section.blocks %}
-        <div class="item item1" >
-          <a href="{{block.settings.button_link}}">
+        <div class="item item1" onclick="location.href={{block.settings.button_link}}">
           <div class="text" style="float:{{block.settings.align}}">
             <h2>{{ block.settings.heading }}</h2>
             <p>{{ block.settings.collection_name }}</p>
@@ -132,7 +134,6 @@
               <img src="{{ block.settings.image | image_url }}" alt="">
             {% endif %}
           </div>
-            </a>
         </div>
       {% endfor %}
     </div>
