--- a/sections/collection-list.liquid
+++ b/sections/collection-list.liquid
@@ -33,6 +33,10 @@
           class="collection-list-title inline-richtext {{ section.settings.heading_size }}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
         >
           {{ section.settings.title }}
+
+          <span>
+            Daily Deal Ends in 
+          </span>
         </h2>
 
         {%- if section.settings.show_view_all and show_mobile_slider -%}
