--- a/sections/collection-list.liquid
+++ b/sections/collection-list.liquid
@@ -35,7 +35,8 @@
           {{ section.settings.title }}
 
           <span>
-            Daily Deal Ends in 
+            <script src="https://cdn.logwork.com/widget/countdown.js"></script>
+<a href="https://logwork.com/countdown-timer" class="countdown-timer" data-timezone="Asia/Dhaka" data-date="2024-11-28 12:53">Countdown Timer</a>
           </span>
         </h2>
 
