--- a/sections/collection-list.liquid
+++ b/sections/collection-list.liquid
@@ -137,7 +137,6 @@
   </div>
 </div>
 
-<script>
   <script>
 // Set the date we're counting down to
 var countDownDate = new Date("Jan 5, 2030 15:37:25").getTime();
@@ -163,10 +162,9 @@ var x = setInterval(function() {
   // If the count down is finished, write some text
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("demo").innerHTML = "EXPIRED";
+    document.getElementById("countdown").innerHTML = "EXPIRED";
   }
 }, 1000);
-</script>
 </script>
 
 {% schema %}
