--- a/sections/collection-list.liquid
+++ b/sections/collection-list.liquid
@@ -33,10 +33,10 @@
           class="collection-list-title inline-richtext {{ section.settings.heading_size }}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
         >
           {{ section.settings.title }}
-
-          <span id="countdown">
-
-          </span>
+          
+        {% if section.settings.date %}
+          <span id="countdown"></span>
+        {% endif %}
         </h2>
 
         {%- if section.settings.show_view_all and show_mobile_slider -%}
@@ -139,7 +139,7 @@
 
   <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Jan 5, 2030 15:37:25").getTime();
+var countDownDate = new Date("{{section.settings.date}}").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
@@ -183,6 +183,13 @@ var x = setInterval(function() {
       "default": "t:sections.collection-list.settings.title.default",
       "label": "t:sections.collection-list.settings.title.label"
     },
+      {
+      "type": "text",
+      "id": "date",
+      "label": "Select Date",
+      "default": "July 3, 2025 00:00:00",
+      "info":"M D, Y H:M:S"
+      },
     {
       "type": "select",
       "id": "heading_size",
