--- a/sections/collection-list.liquid
+++ b/sections/collection-list.liquid
@@ -35,6 +35,7 @@
           {{ section.settings.title }}
 
         {% if section.settings.date != blank %}
+          Deals Expire In
           <span id="countdown"></span>
         {% endif %}
         </h2>
