--- a/sections/collection-list.liquid
+++ b/sections/collection-list.liquid
@@ -36,7 +36,7 @@
 
         {% if section.settings.date != blank %}
           Deals Expire In
-          <span id="countdown"></span>
+          <span id="countdown-{{section.id}}"></span>
         {% endif %}
         </h2>
 
