--- a/sections/collection-list.liquid
+++ b/sections/collection-list.liquid
@@ -157,8 +157,8 @@ var x = setInterval(function() {
   var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-  document.getElementById("countdown-{{ section.id }}").innerHTML = days + "d " + hours + "h "
-  + minutes + "m " + seconds + "s ";
+  document.getElementById("countdown-{{ section.id }}").innerHTML = "<span class='days'>" + days+  "d "  + hours + "h "
+  + minutes + "m " + seconds + "s " + "</span>"
 
   // If the count down is finished, write some text
   if (distance < 0) {
