--- a/sections/logn-banner.liquid
+++ b/sections/logn-banner.liquid
@@ -25,7 +25,7 @@
     </h2>
     <div class="rte{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}">
       {%- if section.settings.page.content != blank -%}
-        <img height="{{section.settings.height}}" src="{{section.settings.image}}" alt="">
+        <img height="{{section.settings.height}}" src="{{section.settings.image | image_url }}" alt="">
       {%- endif -%}
     </div>
   </div>
