--- a/assets/style.css
+++ b/assets/style.css
@@ -78,13 +78,16 @@ a{
 	box-shadow: 0 4px 9px rgb(var(--color-secondary-button-text));
 }
 
-.days, .hours, .minutes, .seconds,.countdown_text{
+.countdown_text{
+	font-size: calc(var(--font-heading-scale) * 3rem);
+}
+
+.days, .hours, .minutes, .seconds{
 	background: #fff;
 	padding: 5px;
 	margin: 5px;
 	color: #000;
     border-radius: 15px;
-	font-size: calc(var(--font-heading-scale) * 3rem);
   }
   .countdown_text{
     margin-left: 2rem;
