--- a/sections/two-column-section.liquid
+++ b/sections/two-column-section.liquid
@@ -94,6 +94,9 @@
     transform: scale(1.3);
     transition: 0.5s all ease-in-out; 
 }
+#two-column-gallary .item .image h3{
+    text-align: center;
+}
 #two-column-gallary .item .text h2{
     font-size: 24px;
     margin: 0;
@@ -132,6 +135,7 @@
           <div class="image overlay-hover">
             {% if block.settings.image != blank %}
               <img src="{{ block.settings.image | image_url }}" alt="">
+              <h3>Men</h3>
             {% endif %}
           </div>
         </div>
