--- a/sections/long-banner.liquid
+++ b/sections/long-banner.liquid
@@ -16,7 +16,7 @@
 
 <div class="color-{{ section.settings.color_scheme }} gradient">
   <div class="section-{{ section.id }}-padding">
-        <img style="object-fit: cover;object-position:{{section.settings.position}}" width="100%" height="{{section.settings.height}}" src="{{section.settings.image | image_url }}" alt="">  
+        <img style="object-fit: cover;object-position:{{section.settings.position}};margin-bottom: -8px;" width="100%" height="{{section.settings.height}}" src="{{section.settings.image | image_url }}" alt="">  
   </div>
 </div>
 
