--- a/sections/shop-brand.liquid
+++ b/sections/shop-brand.liquid
@@ -17,6 +17,10 @@
         gap: 10px;
         justify-content: flex-start;
     }
+    .box img{
+        height: 100px;
+        width: 100px;
+    }
   </style>
   <div class="color-{{ section.settings.color_scheme }} gradient isolate">
     <div class="section-{{ section.id }}-padding page-width">
