--- a/sections/shop-brand.liquid
+++ b/sections/shop-brand.liquid
@@ -24,7 +24,7 @@
   </style>
   <div class="color-{{ section.settings.color_scheme }} gradient isolate">
     <div class="section-{{ section.id }}-padding page-width">
-        <div class="box">
+        <div class="box22">
             {% for block in section.blocks %}
                 <div class="item">
                 <a href="{{block.settings.link}}">
