--- a/sections/shop-brand.liquid
+++ b/sections/shop-brand.liquid
@@ -12,12 +12,12 @@
     }
   {%- endstyle -%}
   <style>
-    .box{
+    .box22{
         display: flex;
         gap: 10px;
         justify-content: flex-start;
     }
-    .box img{
+    .box22 img{
         height: 100px;
         width: 100px;
     }
