--- a/sections/shop-brand.liquid
+++ b/sections/shop-brand.liquid
@@ -25,6 +25,7 @@
   <div class="color-{{ section.settings.color_scheme }} gradient isolate">
     <div class="section-{{ section.id }}-padding page-width">
         <div class="box22">
+            <h3>Shop With Brands</h3>
             {% for block in section.blocks %}
                 <div class="item">
                 <a href="{{block.settings.link}}">
