--- a/sections/shop-brand.liquid
+++ b/sections/shop-brand.liquid
@@ -27,7 +27,7 @@
       <h3>Shop With Brands</h3>
         <div class="box22">
             {% for block in section.blocks %}
-                <div class="item">
+                <div class="item11">
                 <a href="{{block.settings.link}}">
                     <img src="{{ block.settings.image | image_url }}" alt="">
                 </a>
