--- a/sections/four-column.liquid
+++ b/sections/four-column.liquid
@@ -12,7 +12,7 @@
 #three-column-gallary .image{
     z-index: -1;
 }
-.image{
+#three-column-gallary .image{
     display: block;
     max-width: 100%;
     height: 100%;
@@ -22,7 +22,7 @@
     overflow: hidden;
     transition: 0.5s all ease-in-out; 
 }
-.image img{
+#three-column-gallary .image img{
     height: inherit;
     max-width: 100%;
     object-fit: cover;
