--- a/sections/support.liquid
+++ b/sections/support.liquid
@@ -128,7 +128,7 @@
   
   {% schema %}
   {
-    "name": "t:sections.two-column-gallary.name",
+    "name": "Support",
     "tag": "section",
     "class": "section",
     "settings": [
@@ -165,7 +165,7 @@
     ],
     "presets": [
       {
-        "name": "t:sections.two-column-gallary.presets.name"
+        "name": "Support Column"
       }
     ]
   }
